fix header jump

--- a/src/styles/directives/info-block.css
+++ b/src/styles/directives/info-block.css
@@ -1,6 +1,8 @@
 @import '../variables';
 
 .info-block {
+  height: 172px;
+
   font-family: $helvetica-neue-regular;
 }
 
